Uso de Variables en JS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
-    <h1>Aprendiendo JavaScript</h1>
-    <h1 id="titulo" class="titulo"></h1>
+    <h1>Aprendiendo JavaScript Moderno</h1>
+
+    <div id="app"></div>
+    
+    <script src="app.js"></script>
 
 </body>
 </html>
